package alexandre_davi_miguel.busca_oferta_api.dto.encarte;

import java.util.List;

public record EncarteExtracaoDTO(List<ProdutoExtraidoDTO> itens) {}
