package alexandre_davi_miguel.busca_oferta_api.model.enums;

public enum CategoriaProduto {
    ALIMENTOS,
    BEBIDAS,
    LIMPEZA,
    HIGIENE_PESSOAL,
    ELETRODOMESTICOS,
    ELETRONICOS,
    OUTROS
}
